2012-01-13  Sancho Lerena <slerena@artica.es>

	* include/functions_db.php: New custom scheduled report.
	
	* install.php: Fixed first page bad render on IE. Added more php module checks.

	* images/group_banners/flags.png
	images/group_banners/users.png: Removed bad sample icons for group banner.

	* images/group_banners/artica_logo.png: Added new sample icon for group banner.

	* upgrade_to_3.0.sql: Missing table there.

2012-01-12  Sancho Lerena <slerena@artica.es>

	* operation/projects/project_detail.php: Fixed include on creation of a project.

	* operation/side_menu.php,
	operation/contracts/contract_detail.php,
	operation/contacts/contact_detail.php,
	operation/companies/company_role.php,
	operation/companies/company_detail.php: Solved minor ACL problems.

2012-01-11  Sancho Lerena <slerena@artica.es>

	* operation/companies/company_detail.php: Fixed creation of ontracts from
	company detail.

	* operation/search.php,
	operation/companies/company_detail.php: Small fixes on searches. Invoice
	can be erased and small fixes in links.

2012-01-10  Sancho Lerena <slerena@artica.es>

	* include/styles/wiki.css,
	include/wiki/lionwiki_lib.php,
	operation/wiki/wiki.php: Some nice changes to include a custom CSS for
	wiki and minor details on usability.

	* extras/contact_importer.php,
	extras/contract_importer.php,
	extras/company_importer.php: Added new scripts to import CRM data from 
	Sugar CRM (Contacts, accounts and contracts).

2012-01-09  Sancho Lerena <slerena@artica.es>

	* languages/es.po
	languages/es.mo: Spanish translation update.

2012-01-05  Sancho Lerena <slerena@artica.es>

	* index.php: Special request on localhost will "skip" the authentication
	used to generate automatically PDF on enterprise version.
	
	* *.sql: More changes on tuser_report table.
	
	* include/functions.php: Added function delete_all_files_in_dir()

	* functions_config.php: removed menu todo from menu_visibility.
	