@@ -257,85 +257,4 @@ if (give_acl($config["id_user"], 0, "VR") && $show_inventory != MENU_HIDDEN){
 	}
 }
 
-// Incidents
-if (give_acl($config["id_user"], 0, "IR") && $show_incidents != MENU_HIDDEN){
-    // Incident
-    if ($sec == "incidents" )
-	    echo "<li id='current' class='incident'>";
-    else
-	    echo "<li class='incident'>";
-    echo "<a href='index.php?sec=incidents&sec2=operation/incidents/incident'>".__('Incidents')."</a></li>";
-}
-
-// Inventory
-if (give_acl($config["id_user"], 0, "VR") && (get_external_user($config["id_user"]) == false) && $show_inventory != MENU_HIDDEN) {
-    // Incident
-    if ($sec == "inventory" )
-	    echo "<li id='current' class='inventory'>";
-    else
-	    echo "<li class='inventory'>";
-    echo "<a href='index.php?sec=inventory&sec2=operation/inventories/inventory'>".__('Inventory')."</a></li>";
-}
-
-// KB
-if (give_acl($config["id_user"], 0, "KR") && $show_kb != MENU_HIDDEN){
-	if ($sec == "kb" )
-		echo "<li id='current' class='kb'>";
-	else
-		echo "<li class='kb'>";
-	echo "<a href='index.php?sec=kb&sec2=operation/kb/browse'>".__('KB')."</a></li>";
-}
-
-// FILE RELEASES
-if (give_acl($config["id_user"], 0, "KR")){
-
-	if($show_file_releases != MENU_HIDDEN) {
-		// File Releases
-		if ($sec == "download" )
-				echo "<li id='current' class='files'>";
-		else
-				echo "<li class='files'>";
-		echo "<a href='index.php?sec=download&sec2=operation/download/browse'>".__('File Releases')."</a></li>";
-	}
-}
-
-if($show_people != MENU_HIDDEN) {
-	// Users
-	if ($sec == "users" )
-		echo "<li id='current' class='people'>";
-	else
-		echo "<li class='people'>";
-	echo "<a href='index.php?sec=users&sec2=operation/user_report/report_monthly'>".__('People')."</a></li>";
-}
-
-if($show_todo != MENU_HIDDEN) {
-	// TODO
-	if ($sec == "todo" )
-		echo "<li id='current' class='todo'>";
-	else
-		echo "<li class='todo'>";
-	echo "<a href='index.php?sec=todo&sec2=operation/todo/todo'>".__('Todo')."</a></li>";
-}
-
-// Agenda
-if (give_acl($config["id_user"], 0, "AR") && $show_agenda != MENU_HIDDEN){
-	// Agenda
-	if ($sec == "agenda" )
-		echo "<li id='current' class='agenda'>";
-	else
-		echo "<li class='agenda'>";
-	echo "<a href='index.php?sec=agenda&sec2=operation/agenda/agenda'>".__('Agenda')."</a></li>";
-}
-
-// Setup
-if (isset($config["id_user"]) && dame_admin($config["id_user"]) && $show_setup != MENU_HIDDEN){
-	// Setup
-	if ($sec == "godmode" )
-		echo "<li id='current' class='setup'>";
-	else
-		echo "<li class='setup'>";
-	echo "<a href='index.php?sec=godmode&sec2=godmode/setup/setup'>".__('Setup')."</a></li>";
-}
-
-echo "</ul>";
 ?>
